topic list item

--- a/src/main/resources/view/partials/_itemViewPaper.fxml
+++ b/src/main/resources/view/partials/_itemViewPaper.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox maxHeight="-Infinity" fx:id="root" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       fx:controller="department.ui.controller.view.ItemViewPaperController" prefHeight="60.0"
       xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
