--- a/src/main/resources/view/partials/_itemViewTopic.fxml
+++ b/src/main/resources/view/partials/_itemViewTopic.fxml
@@ -5,21 +5,21 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="1.7976931348623157E308" fx:controller="department.ui.controller.view.ItemViewTopicController" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox minWidth="-Infinity" prefHeight="50.0" prefWidth="250.0">
          <children>
-            <HBox fx:id="nameTopiic" minWidth="25.0" prefWidth="25.0">
+            <HBox minWidth="25.0" prefWidth="25.0">
                <children>
                   <Label text="Назва:" />
-                  <Label fx:id="titleTopic" layoutX="10.0" layoutY="10.0" text="..." />
+                  <Label fx:id="topic" layoutX="10.0" layoutY="10.0" text="..." />
                </children>
             </HBox>
             <Separator prefWidth="200.0" />
-            <HBox fx:id="dateTopic">
+            <HBox>
                <children>
                   <Label layoutX="10.0" layoutY="10.0" text="Дата:" />
-                  <Label fx:id="dateTopic" layoutX="10.0" layoutY="10.0" text="..." />
+                  <Label fx:id="date" layoutX="10.0" layoutY="10.0" text="..." />
                </children>
             </HBox>
          </children>
