--- a/src/main/resources/view/style.css
+++ b/src/main/resources/view/style.css
@@ -1,4 +1,4 @@
-.combo-box .arrow, .combo-box .arrow-button{
+/*.combo-box .arrow, .combo-box .arrow-button{
     -fx-background-color: transparent;
 }
 
@@ -15,8 +15,17 @@
     -fx-background-color: -fx-mark-highlight-color, -fx-mark-color;
     -fx-background-insets: 0 0 0 0, 0;
     -fx-padding: 0 0 0 0;
-    /*
+    / *
         -fx-shape: "M 0 0 h 7 l -3.5 4 z";
-    */
+    * /
     -fx-shape: null;
+}*/
+
+.tab-pane:top
+{
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-background-image: url("../img/UKMA_logo.gif");
+    -fx-background-position: center center;
+    -fx-background-repeat: no-repeat;
+    -fx-background-size: 300px;
 }
