--- a/src/main/resources/view/partials/_formEditPostgraduate.fxml
+++ b/src/main/resources/view/partials/_formEditPostgraduate.fxml
@@ -10,7 +10,7 @@
    <children>
       <TabPane layoutX="-1.0">
          <tabs>
-            <Tab text="Редагування">
+            <Tab closable="false" text="Редагування">
                <content>
                       <VBox alignment="CENTER_LEFT" layoutX="-1.0" layoutY="50.0" maxWidth="1.7976931348623157E308">
                           <children>
@@ -156,7 +156,7 @@
                       </VBox>
                </content>
             </Tab>
-            <Tab text="Список робіт">
+            <Tab closable="false" text="Список робіт">
               <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
