--- a/src/main/resources/view/style.css
+++ b/src/main/resources/view/style.css
@@ -40,3 +40,32 @@
 .customProgressIndicator .percentage {
     -fx-fill: null;
 }*/
+
+.menu-bar{
+    -fx-background-color: transparent;
+}
+.menu-bar .menu-button:hover, .menu-bar .menu-button:focused, .menu-bar .menu-button:showing {
+    -fx-background: -fx-accent;
+    -fx-background-color: -fx-selection-bar;
+    -fx-text-fill: -fx-selection-bar-text;
+}
+
+.menu-bar>*container>*.menu-button>*.label,
+.menu-bar>*container>*.menu-button:hover,
+.menu-bar > .container > .menu-button:hover,
+.menu-bar > .container > .menu-button:focused,
+.menu-bar > .container > .menu-button:showing {
+    -fx-background-color: transparent;
+}
+
+.menu-bar .menu-button:hover {
+    -fx-background: -fx-accent;
+    -fx-background-color: -fx-selection-bar;
+    -fx-text-fill: -fx-selection-bar-text;
+}
+
+.menu-bar .menu-button {
+    -fx-background-radius: 0;
+    -fx-background-color: transparent;
+    -fx-background-insets: 0;
+}
