--- a/src/main/resources/view/partials/_formEditMaster.fxml
+++ b/src/main/resources/view/partials/_formEditMaster.fxml
@@ -108,7 +108,7 @@
                         </HBox>
                         <HBox alignment="CENTER">
                            <children>
-                              <ProgressIndicator fx:id="progressBar" prefHeight="30.0" prefWidth="30.0" />
+                              <ProgressIndicator fx:id="progressBar" prefHeight="30.0" prefWidth="30.0" visible="false" />
                                     <Button fx:id="actionButton" mnemonicParsing="false" onAction="#onCreate" text="Зберегти зміни">
                                  <VBox.margin>
                                     <Insets top="5.0" />
