--- a/src/main/resources/view/partials/_formEditPaper.fxml
+++ b/src/main/resources/view/partials/_formEditPaper.fxml
@@ -56,15 +56,13 @@
                      </VBox.margin>
                   </HBox>
                   <Label text="Виконавець" />
-                  <Label fx:id="executorLabel" />
-                  <ComboBox fx:id="executorBox" disable="true" editable="true" maxWidth="1.7976931348623157E308" opacity="0.0" />
+                  <ComboBox fx:id="executorBox" editable="true" maxWidth="1.7976931348623157E308" />
                   <Label text="Керівник" />
-                  <Label fx:id="supervisorLabel" text="орпав" />
-                  <ComboBox fx:id="supervisorBox" disable="true" editable="true" layoutX="35.0" layoutY="185.0" maxWidth="1.7976931348623157E308" opacity="0.0" />
+                  <ComboBox fx:id="supervisorBox" editable="true" layoutX="35.0" layoutY="185.0" maxWidth="1.7976931348623157E308" />
                   <FlowPane prefHeight="86.0" prefWidth="389.0" />
                   <HBox alignment="CENTER">
                      <children>
-                        <ProgressIndicator prefHeight="30.0" prefWidth="30.0" />
+                        <ProgressIndicator prefHeight="30.0" prefWidth="30.0" visible="false" />
                         <Button mnemonicParsing="false" onAction="#onCreatePaper" text="Зберегти зміни" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                      </children>
                      <VBox.margin>
