--- a/src/main/resources/view/partials/_formEditPostgraduate.fxml
+++ b/src/main/resources/view/partials/_formEditPostgraduate.fxml
@@ -137,7 +137,7 @@
                         </ComboBox>
                         <HBox alignment="CENTER">
                            <children>
-                              <ProgressIndicator prefHeight="30.0" prefWidth="30.0" />
+                              <ProgressIndicator prefHeight="30.0" prefWidth="30.0" visible="false" />
                                     <Button mnemonicParsing="false" onAction="#onCreatePostgraduate" text="Зберегти зміни">
                                  <VBox.margin>
                                     <Insets top="5.0" />
